# mechanical_mirror

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
